--- a/Register.html
+++ b/Register.html
@@ -3,21 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login Page</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <title>Sign up</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="container">
-        <h1>Login or Register</h1>
-            <div id="auth-buttons">
-                <button id="login-btn">Login</button>
-                <button id="signup-btn">Signup</button>
-                <button id="logout-btn" style="display:none;">Logout</button>
-            </div>
-
-        <div id="user-email"></div>
+  <header>
+    <h2>Sign Up</h2>
+    <div class="nav-buttons">
+      <a href="home.html">
+        <button>Home</button>
+      </a>
     </div>
-  <script src="/Backend/JavaScript/main.js"></script>
+  </header>
+
+  <div class="container">
+    <h2>Sign up</h2>
+    <form id="signup-form">
+      <div>
+        <input type="email" id="email" placeholder="Email" required class="register-input" />
+      </div>
+      <div>
+        <input type="password" id="password" placeholder="Password" required class="register-input"/>
+      </div>
+    <button type="submit" class="re-btn">Sign Up</button>
+  </form>
+
+  <p>Already have an account? <a href="login.html">Login</a></p>
+
+  </div>
+  <div id="message"></div>
+
+  <script>
+    const signupForm = document.getElementById('signup-form');
+    const message = document.getElementById('message');
+
+    signupForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      try {
+        const response = await fetch('https://time-date.netlify.app/.netlify/identity/signup', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          message.textContent = `Welcome, ${data.email}! Please check your email to confirm your account.`;
+          signupForm.reset();
+        } else {
+          throw new Error(data.msg || 'Signup failed');
+        }
+      } catch (err) {
+        console.error(err);
+        message.textContent = `Error: ${err.message}`;
+      }
+    });
+  </script>
 </body>
 </html>
