--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <style>
-      h2
-      {
-        font-size: 30px;
-      }
-      
-      header
-      {
-        height: 60px;
-      }
-    </style>
 </head>
 <body>
     <header>
@@ -29,7 +18,9 @@
         </div>
     </header>
 
-    <form name="contact" netlify>
+    <div class="container">
+      <h2>Contact</h2>
+          <form name="contact" netlify>
         <p>
           <label>Name <input type="text" name="name" /></label>
         </p>
@@ -37,8 +28,12 @@
           <label>Email <input type="email" name="email" /></label>
         </p>
         <p>
+          <label>Message <input type="text" name="message" class="message-input"></label>
+        </p>
+        <p>
           <button type="submit">Send</button>
         </p>
       </form>
+    </div>
 </body>
 </html>
