--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <a href="register.html">
         <button>Register</button>
       </a>
+      <a>
+        <button>Login</button>
+      </a>
       <a href="dashboard.html" target="_blank">
         <button>Dashboard</button>
       </a>
