--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="register.html">
         <button>Register</button>
       </a>
-      <a>
+      <a href="login.html">
         <button>Login</button>
       </a>
       <a href="dashboard.html" target="_blank">
