--- a/login.html
+++ b/login.html
@@ -7,28 +7,28 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <header>
-        <h2>Login</h2>
-        <div class="nav-buttons">
-            <a href="home.html">
-                <button>Home</button>
-            </a>
-        </div>
-    </header>
-
-    <div class="container">
-        <h2>Login</h2>
-    <form id="login-form">
-        <div>
-            <input type="email" id="email" placeholder="Email" required class="register-input"/>
-        </div>
-        <div>
-            <input type="password" id="password" placeholder="Password" required class="register-input"/>
-        </div>
-    <button type="submit">Log In</button>
-  </form>
-  <p>Don't have an account? <a href="Register.html">Register</a></p>
+  <header>
+    <h2>Login</h2>
+    <div class="nav-buttons">
+      <a href="home.html">
+        <button>Home</button>
+      </a>
     </div>
+  </header>
+
+  <div class="container">
+    <h2>Login</h2>
+    <form id="login-form">
+      <div>
+        <input type="email" id="email" placeholder="Email" required class="register-input"/>
+      </div>
+      <div>
+        <input type="password" id="password" placeholder="Password" required class="register-input"/>
+      </div>
+      <button type="submit">Log In</button>
+    </form>
+    <p>Don't have an account? <a href="Register.html">Register</a></p>
+  </div>
 
   <div id="message"></div>
 
@@ -43,7 +43,7 @@
       const password = document.getElementById('password').value;
 
       try {
-        const response = await fetch('https://time-date.netlify.app/.netlify/identity/token', {
+        const response = await fetch('/.netlify/identity/token', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({
@@ -53,21 +53,25 @@
           })
         });
 
-        const data = await response.json();
+        const text = await response.text(); // Read raw response
+        let data = {};
+        try {
+          data = JSON.parse(text); // Try to parse JSON
+        } catch (err) {
+          console.warn('Server response is not JSON:', text);
+        }
 
         if (response.ok) {
           const token = data.access_token;
-          const userEmail = email;
-
-          message.textContent = `Welcome back, ${userEmail}! You are logged in.`;
-          console.log('JWT Access Token:', token);
+          message.textContent = `✅ Welcome back, ${email}! You are logged in.`;
+          console.log('✅ JWT Access Token:', token);
           loginForm.reset();
         } else {
           throw new Error(data.error_description || 'Login failed');
         }
       } catch (err) {
-        console.error(err);
-        message.textContent = `Error: ${err.message}`;
+        console.error('❌ Login Error:', err.message);
+        message.textContent = `❌ Error: ${err.message}`;
       }
     });
   </script>
