--- a/Register.html
+++ b/Register.html
@@ -3,64 +3,67 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sign up</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Register</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
-    <h2>Sign Up</h2>
+    <h2>Register</h2>
     <div class="nav-buttons">
-      <a href="home.html">
-        <button>Home</button>
-      </a>
+      <a href="home.html"><button>Home</button></a>
     </div>
   </header>
 
   <div class="container">
-    <h2>Sign up</h2>
-    <form id="signup-form">
+    <h2>Create an Account</h2>
+    <form id="register-form">
       <div>
-        <input type="email" id="email" placeholder="Email" required class="register-input" />
+        <input type="email" id="reg-email" placeholder="Email" required class="register-input"/>
       </div>
       <div>
-        <input type="password" id="password" placeholder="Password" required class="register-input"/>
+        <input type="password" id="reg-password" placeholder="Password" required class="register-input"/>
       </div>
-    <button type="submit" class="re-btn">Sign Up</button>
-  </form>
-
-  <p>Already have an account? <a href="login.html">Login</a></p>
-
+      <button type="submit">Register</button>
+    </form>
+    <p>Already have an account? <a href="login.html">Log in</a></p>
   </div>
+
   <div id="message"></div>
 
   <script>
-    const signupForm = document.getElementById('signup-form');
+    const registerForm = document.getElementById('register-form');
     const message = document.getElementById('message');
 
-    signupForm.addEventListener('submit', async (e) => {
+    registerForm.addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
+      const email = document.getElementById('reg-email').value;
+      const password = document.getElementById('reg-password').value;
 
       try {
-        const response = await fetch('https://time-date.netlify.app/.netlify/identity/signup', {
+        const response = await fetch('/.netlify/identity/signup', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ email, password })
         });
 
-        const data = await response.json();
+        const text = await response.text();
+        let data = {};
+        try {
+          data = JSON.parse(text);
+        } catch (err) {
+          console.warn('Non-JSON response:', text);
+        }
 
         if (response.ok) {
-          message.textContent = `Welcome, ${data.email}! Please check your email to confirm your account.`;
-          signupForm.reset();
+          message.textContent = `✅ Account created! Please check your email to confirm before logging in.`;
+          registerForm.reset();
         } else {
-          throw new Error(data.msg || 'Signup failed');
+          throw new Error(data.error_description || 'Signup failed');
         }
       } catch (err) {
-        console.error(err);
-        message.textContent = `Error: ${err.message}`;
+        console.error('❌ Signup Error:', err.message);
+        message.textContent = `❌ Error: ${err.message}`;
       }
     });
   </script>
