--- a/admin_panel.html
+++ b/admin_panel.html
@@ -19,7 +19,7 @@
   </header>
 
   <div>
-    <button onclick="netlifyIdentity.open()">Login or Sign up</button>
+    <button onclick="netlifyIdentity.open()">Login</button>
     <div id="user-info"></div>
 
     <div id="admin-panel">
