--- a/home.html
+++ b/home.html
@@ -35,7 +35,8 @@
       <h2>Update Log</h2>
       <div>
         <ul>
-          
+          <li>Added a dropdown for tool's and account</li>
+          <li>Added tools Stopwatch, Timer, and Calendar</li>
         </ul>
       </div>
     </div>
