--- a/stopwatch.html
+++ b/stopwatch.html
@@ -5,17 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>StopWatch</title>
-    <style>
-        .container-stopwatch
-        {
-            margin-top: 40px;
-            text-align: center;
-            padding: 40px;
-            border-radius: 20px;
-            background-color: rgba(255, 255, 255, 0.1);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -26,7 +15,7 @@
             </a>
         </div>
     </header>
-    <div class="container-stopwatch">
+    <div class="container">
         <div id="display" class="display">00:00:00</div>
 
         <button id="start">Start</button>
