--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,10 @@
       <h2>Contact</h2>
           <form name="contact" netlify>
         <p>
-          <label>Name <input type="text" name="name" /></label>
+          <label>Name <input type="text" name="name" placeholder="Enter your name" required/></label>
         </p>
         <p>
-          <label>Email <input type="email" name="email" /></label>
+          <label>Email <input type="email" name="email" placeholder="Enter your email" required/></label>
         </p>
         <p>
           <label>Message <input type="text" name="message" class="message-input"></label>
