--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <header style="padding: 15px 30px; background-color: #0f2027; color: white; display: flex; justify-content: space-between; align-items: center;">
+  <header>
     <div class="logo">TimeNow</div>
     
-    <nav class="nav-buttons" style="display: flex; flex-wrap: wrap; align-items: center; gap: 10px;">
+    <nav class="nav-buttons">
       <div class="nav1">
       <a href="home.html"><button>Home</button></a>
       <button id="settingsBtn">24 Hour Time</button>
