--- a/register.html
+++ b/register.html
@@ -17,6 +17,8 @@
     </div>
   </header>
 
+  <h1>Register and Login wont be working for a while</h1>
+  <h2>Working on updates</h2>
   <div class="container">
     <h2>Sign up or Login</h2>
     <div id="user-greeting" style="margin-top: 1rem;"></div>
