--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="container">
     <div id="main">
-      <h1 style="margin-bottom: 20px; margin: 20px;">Current Date & Time</h1>
+      <h1>Current Date & Time</h1>
       <hr>
       <div class="datetime">
         <div><strong>Date:</strong> <span id="date"></span></div>
