--- a/home.html
+++ b/home.html
@@ -36,7 +36,10 @@
       <div>
         <ul>
           <li>Added a dropdown for tool's and account</li>
-          <li>Added tools Stopwatch, Timer, and Calendar</li>
+          <p>Added tools Stopwatch, Timer, and Calendar</p>
+          <br>
+          <li>Added working Firebase login and registration</li>
+          <p>I will be adding the dashboard soon</p>
         </ul>
       </div>
     </div>
