--- a/home.html
+++ b/home.html
@@ -38,8 +38,8 @@
           <li>Added a dropdown for tool's and account</li>
           <p>Added tools Stopwatch, Timer, and Calendar</p>
           <br>
-          <li>Added working Firebase login and registration</li>
-          <p>I will be adding the dashboard soon</p>
+          <li>Added working login and registration</li>
+          <p>Added dashboard</p>
         </ul>
       </div>
     </div>
