--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav class="nav-buttons">
       <div class="nav1">
       <a href="home.html"><button>Home</button></a>
+      <a href="chat.html"><button>Chat Room (NEW)</button></a>
       <button id="settingsBtn">24 Hour Time</button>
       <button id="worldBtn">World Time</button>
 
@@ -29,12 +30,12 @@
 
       
       <div class="dropdown">
-        <button class="dropdown-button">Account</button>
+        <button class="dropdown-button">Account (NEW DASHBOARD)</button>
         <div class="dropdown-content">
           <a href="register.html">Register</a>
           <a href="dashboard.html">Dashboard</a>
           <a href="contact.html">Contact</a>
-          <a href="admin_panel.html">Admin Login</a>
+          <a href="admin.html">Admin Login</a>
         </div>
       </div>
       </div>
